welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
DwarfCode:39: error: ')' expected but ';' found.
droite();
        ^